--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build --prod --output-hashing=none && npm run package",
     "package": "cat dist/AngularCustomElementExample/{runtime,polyfills,scripts,main}.js > dist/AngularCustomElementExample/example.js",
-    "serve": "http-server example/ --gzip"
+    "serve": "http-server dist/AngularCustomElementExample/ --gzip"
   },
   "private": true,
   "dependencies": {
